--- a/untitled/ide.ui
+++ b/untitled/ide.ui
@@ -140,7 +140,7 @@
    </widget>
    <widget class="QTextEdit" name="stdout">
     <property name="enabled">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
