Tipos de datos: int-float-long-doubles listosy funcionando

--- a/untitled/ide.ui
+++ b/untitled/ide.ui
@@ -79,7 +79,7 @@
      </rect>
     </property>
     <property name="cursor">
-     <cursorShape>OpenHandCursor</cursorShape>
+     <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="text">
      <string>CLEAR</string>
